// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.create creates a barebones campaign 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 1,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .expansionContent gets all content 1`] = `
Object {
  "innovations": Array [
    Object {
      "bonus": "",
      "endeavors": Array [],
      "expansion": "dk",
      "id": "radiating orb",
      "keywords": Array [
        "science",
      ],
      "name": "Radiating Orb",
      "settlement": Object {
        "activeSurvivorsList": Array [],
        "departing": Object {
          "accuracy": 0,
          "courage": 0,
          "description": Array [
            "**Radiating Orb**: Survivors with a constellation gain +1 survival",
          ],
          "evasion": 0,
          "hunt xp": 0,
          "insanity": 0,
          "strength": 0,
          "survival": 1,
          "understanding": 0,
        },
        "name": "New Settlement",
        "newborn": Object {
          "accuracy": 0,
          "courage": 0,
          "description": Array [],
          "evasion": 0,
          "hunt xp": 0,
          "insanity": 0,
          "strength": 0,
          "survival": 1,
          "understanding": 0,
        },
        "showdown": Object {
          "accuracy": 0,
          "courage": 0,
          "description": Array [],
          "evasion": 0,
          "hunt xp": 0,
          "insanity": 0,
          "strength": 0,
          "survival": 0,
          "understanding": 0,
        },
        "survivalLimit": 0,
        "survivors": Object {},
      },
    },
  ],
  "length": 4,
  "locations": Array [
    Object {
      "endeavors": Array [
        Object {
          "expansion": "dk",
          "id": "innovate",
          "name": "Innovate",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "hide",
                "quantity": 1,
                "resource": null,
              },
            ],
            "not_innovation": null,
            "not_location": null,
          },
        },
        Object {
          "expansion": "dk",
          "id": "fear and trembling",
          "name": "Fear and Trembling",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "not_innovation": null,
            "not_location": null,
          },
        },
        Object {
          "expansion": "dk",
          "id": "build_bone_smith",
          "name": "Build - Bone Smith",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "not_innovation": null,
            "not_location": "bone_smith",
          },
        },
        Object {
          "expansion": "dk",
          "id": "build_skinnery",
          "name": "Build - Skinnery",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "not_innovation": null,
            "not_location": "skinnery",
          },
        },
        Object {
          "expansion": "dk",
          "id": "build_organ_grinder",
          "name": "Build - Organ Grinder",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "not_innovation": null,
            "not_location": "organ_grinder",
          },
        },
      ],
      "expansion": "dk",
      "id": "throne",
      "name": "Throne",
    },
  ],
  "resources": Array [
    Object {
      "id": "hardened ribs",
      "quantity": 2,
      "resource": "hardened ribs",
    },
    Object {
      "id": "pituitary gland",
      "quantity": 2,
      "resource": "pituitary gland",
    },
  ],
}
`;

exports[`with RootStore .huntingMonsterLevel gets the monster level 1`] = `
Object {
  "accuracy": 2,
  "damage": 2,
  "deck": Object {
    "A": 9,
    "B": 10,
    "L": 2,
    "S": Array [
      "Cunning",
      "Merciless",
      "Indomitable",
    ],
  },
  "evasion": 0,
  "huntExtra": undefined,
  "huntboard": "MMBBMOBMMBXS",
  "id": "3",
  "life": 0,
  "luck": 1,
  "movement": 8,
  "name": "3",
  "showdownExtra": undefined,
  "speed": 2,
  "toughness": 14,
}
`;

exports[`with RootStore .selectExpansion resets expansion related data when removing expansion 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 1,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {
    "hardened ribs": Object {
      "id": "hardened ribs",
      "quantity": 0,
      "resource": "hardened ribs",
    },
    "pituitary gland": Object {
      "id": "pituitary gland",
      "quantity": 0,
      "resource": "pituitary gland",
    },
  },
  "type": "potl",
}
`;

exports[`with RootStore .selectInnovation adds innovation with bonuses 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {
    "cooking": "cooking",
  },
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 2,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .selectInnovation removes innovation with bonuses 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 1,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .selectLocation adds location without endeavors 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {
    "catarium": "catarium",
  },
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 1,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .selectLocation removes location without endeavors 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 1,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .selectPrinciple adds a principle 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": "cannibalize",
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 2,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .selectPrinciple removes a principle with it's bonus 1`] = `
Object {
  "expansions": Object {
    "core": "core",
  },
  "hunting": null,
  "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "innovations": Object {},
  "locations": Object {},
  "notes": "",
  "principles": Object {
    "conviction": null,
    "death": null,
    "newlife": null,
    "society": null,
  },
  "settlement": Object {
    "activeSurvivorsList": Array [],
    "departing": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "name": "New Settlement",
    "newborn": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 1,
      "understanding": 0,
    },
    "showdown": Object {
      "accuracy": 0,
      "courage": 0,
      "description": Array [],
      "evasion": 0,
      "hunt xp": 0,
      "insanity": 0,
      "strength": 0,
      "survival": 0,
      "understanding": 0,
    },
    "survivalLimit": 1,
    "survivors": Object {},
  },
  "showdown": null,
  "stored_resources": Object {},
  "type": "potl",
}
`;

exports[`with RootStore .showdownMonsterLevel gets the monster level 1`] = `
Object {
  "accuracy": 2,
  "damage": 2,
  "deck": Object {
    "A": 9,
    "B": 10,
    "L": 2,
    "S": Array [
      "Cunning",
      "Merciless",
      "Indomitable",
    ],
  },
  "evasion": 0,
  "huntExtra": undefined,
  "huntboard": "MMBBMOBMMBXS",
  "id": "3",
  "life": 0,
  "luck": 1,
  "movement": 8,
  "name": "3",
  "showdownExtra": undefined,
  "speed": 2,
  "toughness": 14,
}
`;
